--- a/wbfrontend/src/app/home/index-page/index-page.html
+++ b/wbfrontend/src/app/home/index-page/index-page.html
@@ -1,6 +1,6 @@
 <div class="home-page">
-    <h1>Welcome to Demo Admin</h1>
-    <p>This is the home page of your Angular project.</p>
+    <h1>Welcome to Light WhiteBoard</h1>
+    <p>User your imagination and create whiteboard for your project.</p>
     <app-list-ofboards></app-list-ofboards>
 </div>
 
