--- a/wbfrontend/src/app/home/nav-bar/nav-bar.html
+++ b/wbfrontend/src/app/home/nav-bar/nav-bar.html
@@ -1,17 +1,18 @@
 <nav class="navbar">
   <!-- Logo -->
-  <a href="#" class="navbar-logo">MyApp</a>
+  <a href="#" class="navbar-logo">Light WhiteBoard</a>
 
   <!-- Navigation Links -->
   <div class="navbar-links">
     <a routerLink="">Home</a>
-    <a routerLink="/adminpanel">Dashboard</a>
+    <a *ngIf="islogged" routerLink="/adminpanel">Dashboard</a>
     <a routerLink="/login">Login</a>
-    <a routerLink="/register">SignUp</a>
+
+    <a *ngIf="islogged" routerLink="/register">SignUp</a>
   </div>
 
   <!-- Profile Section -->
-  <div class="navbar-profile">
+  <div *ngIf="islogged" class="navbar-profile">
     <span style="color: #fff; font-size: 0.95rem;">Sifat</span>
     <div class="navbar-avatar"></div>
   </div>
