--- a/wbfrontend/src/app/home/nav-bar/nav-bar.html
+++ b/wbfrontend/src/app/home/nav-bar/nav-bar.html
@@ -17,6 +17,6 @@
     <div class="navbar-avatar"></div>
   </div>
   <div class="themechange">
-    <button class="toggle-btn">{{isDark ? 'Dark Theme': 'Light Theme'}}</button>
+    <button (click)="ontogolet()"  class="toggle-btn">{{isDark ? 'Dark Theme': 'Light Theme'}}</button>
   </div>
 </nav>
